<!--
  ~ Copyright 2026 Andrey Tolpeev
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="navigation_rate_unavailable">Could not check the rating preference.</string>
    <string name="navigation_rate_retry">Retry rating preference</string>
    <string name="navigation_projects_title">Projects</string>
    <string name="navigation_open_drawer">Open navigation drawer</string>
    <string name="navigation_back">Back</string>
    <string name="navigation_empty">No projects or build configurations</string>
    <string name="navigation_rate_title">Rate TeamCityApp</string>
    <string name="navigation_rate_description">Like the app? Give us a review, we\'ll appreciate it.</string>
    <string name="navigation_rate_cancel">Cancel</string>
    <string name="navigation_rate_now">Rate</string>
    <string name="navigation_rate_save_failed">Couldn\'t save your choice. Try again.</string>
</resources>
