...
                Surface {
                    Column(Modifier.windowInsetsPadding(TopAppBarDefaults.windowInsets)) {
                        TopAppBar(
                            title = {},
                            windowInsets = WindowInsets(0, 0, 0, 0),
                            navigationIcon = {
                                IconButton(onClick = onBack, modifier = Modifier.testTag("history:back")) {
                                    Icon(painterResource(R.drawable.ic_history_back), stringResource(R.string.history_back))
                                }
                            },
                            actions = {
                                IconButton(onClick = onFilters, modifier = Modifier.testTag("history:filter").onGloballyPositioned { anchors[BuildHistoryPrompt.Filter] = it.boundsInRoot() }) {
                                    Icon(painterResource(R.drawable.ic_history_filter), stringResource(R.string.history_filter))
...
